adding function outline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>PokéNom</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <link src="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <nav>
