result parameters are not being passed in

--- a/type-search.html
+++ b/type-search.html
@@ -58,7 +58,7 @@
     </div>
     <!--Google maps-->
     <!-- "https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g&libraries=places" -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g&libraries=places"></script>
     <!--Jquery import-->
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
