Basic folder structure done

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <ul class="left nav-mobile">
         <li style="display: inline-block" id="right-align">
           <a
-            href="map.html"
+            href="about-us.html"
             class="waves-effect wh"
             style="justify-content: flex-end !important"
-            >Map</a
+            >About Us</a
           >
         </li>
       </ul>
@@ -45,7 +45,7 @@
       <!-- Right-aligned "About Us" navigation -->
       <ul class="right nav-mobile">
         <li style="display: inline-block" id="left-align">
-          <a href="type-search.html" class="waves-effect wh">Type Search</a>
+          <a href="type-search.html" class="waves-effect wh">Map</a>
         </li>
       </ul>
     </div>
@@ -56,10 +56,7 @@
         <h4 class="col12 center-align">Landing Page Content</h4>
       </div>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g"></script>
     <script src="./assets/js/main-page.js"></script>
-
-    <script src="./assets/js/type-search.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
