--- a/about-us.html
+++ b/about-us.html
@@ -17,10 +17,10 @@
       <ul class="left nav-mobile">
         <li style="display: inline-block" class="active" id="right-align">
           <a
-            href="map.html"
+            href="about-us.html"
             class="waves-effect wh"
             style="justify-content: flex-end !important"
-            >Map</a
+            >About Us</a
           >
         </li>
       </ul>
@@ -33,7 +33,7 @@
       <!-- Right-aligned "About Us" navigation -->
       <ul class="right nav-mobile">
         <li style="display: inline-block" id="left-align">
-          <a href="type-search.html" class="waves-effect wh">Type Search</a>
+          <a href="type-search.html" class="waves-effect wh">Map</a>
         </li>
       </ul>
     </div>
@@ -41,20 +41,20 @@
   <body>
     <div class="container">
       <div class="row">
-        <h4 class="col12 center-align">Map Content</h4>
+        <h4 class="col12 center-align">About Us Content</h4>
       </div>
       <div class="row" style="height: 60vh">
         <div class="center-align" id="map" style="height: 100%"></div>
       </div>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g"></script>
-    <script src="./assets/js/main-page.js"></script>
-    <script src="./assets/js/type-search.js"></script>
+
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
       integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="./assets/js/about-us.js"></script>
+    <script src="./assets/js/main-page.js"></script>
   </body>
 </html>
