--- a/type-search.html
+++ b/type-search.html
@@ -20,10 +20,10 @@
       <ul class="left nav-mobile">
         <li style="display: inline-block" id="right-align">
           <a
-            href="map.html"
+            href="about-us.html"
             class="waves-effect wh"
             style="justify-content: flex-end !important"
-            >Map</a
+            >About Us</a
           >
         </li>
       </ul>
@@ -36,7 +36,7 @@
       <!-- Right-aligned "About Us" navigation -->
       <ul class="right nav-mobile">
         <li style="display: inline-block" class="active" id="left-align">
-          <a href="type-search.html" class="waves-effect wh">Type Search</a>
+          <a href="type-search.html" class="waves-effect wh">Map</a>
         </li>
       </ul>
     </div>
@@ -46,11 +46,17 @@
       <div class="row">
         <h4 class="col12 center-align">About Us Content</h4>
       </div>
-      <div class="ui-widget"> 
+      <div class="ui-widget">
         <!--TODO Mary: add poketype icons and names-->
         <label for="poketypes">Choose a Pokémon type: </label>
         <input id="poketypes" />
-        <button class="btn waves-effect waves-light" type="submit" name="action" id="subpokemon">Submit
+        <button
+          class="btn waves-effect waves-light"
+          type="submit"
+          name="action"
+          id="subpokemon"
+        >
+          Submit
           <i class="material-icons right">send</i>
         </button>
       </div>
@@ -66,8 +72,7 @@
       crossorigin="anonymous"
     ></script>
     <!--Jquery UI-->
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js">
-      </script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!--Jquery function-->
     <script>
       $(function () {
@@ -97,9 +102,7 @@
       });
     </script>
 
-    <script src="./assets/js/main-page.js"></script>
-
     <script src="./assets/js/type-search.js"></script>
-
+    <script src="./assets/js/main-page.js"></script>
   </body>
 </html>
