--- a/about-us.html
+++ b/about-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PokéNom</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
