Added info for Rob

--- a/about-us.html
+++ b/about-us.html
@@ -98,7 +98,7 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="./assets/images/" />
+                <img src="./assets/images/Rob.png" />
                 <span class="card-title">Robert</span>
               </div>
               <div class="card-content">
