--- a/index.html
+++ b/index.html
@@ -119,6 +119,35 @@
           </div>
         </div>
       </div>
+      <!-- Image Section -->
+      <div class="section">
+        <div class="container">
+          <div class="row landing-row" id="flexbox-turn-on">
+            <div class="col s12 m6">
+              <img
+                src="./assets/images/Rob.png"
+                alt="Instructions Image"
+                class="responsive-img"
+              />
+            </div>
+            <div class="col s12 m6">
+              <h3>New Section</h3>
+              <p>Put some stuff here dude!</p>
+              <ol>
+                <li>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                </li>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </li>
+                <li>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="./assets/js/main-page.js"></script>
     <script
