finishes adding place types to all pokemon types

--- a/type-search.html
+++ b/type-search.html
@@ -54,7 +54,7 @@
         <!--TODO Mary: add poketype icons and names-->
         <div class="input-field">
           <input id="poketypes" type="text" class="validate" />
-          <label for="poketypes">Choose a Pokémon type:</label>
+          <label for="poketypes" id="poke-type-label">Choose a Pokémon type:</label>
         </div>
         <button
           class="btn waves-effect waves-light"
