adjusted index files

--- a/about-us.html
+++ b/about-us.html
@@ -63,15 +63,15 @@
             <div class="card">
               <div class="card-image">
                 <img src="./assets/images/Thea.png" />
-                <span class="card-title">Thea</span>
+                <span class="card-title">Aletheia</span>
               </div>
               <div class="card-content">
-                <p>Short Bio of Thea</p>
-                <p><strong>Technologies:</strong> Tech1, Tech2, Tech3</p>
-                <p><strong>Role:</strong> Role in the Project</p>
+                <p>Aletheia is a current student at the UCF bootcamp. She has a passion for Dungeons and Dragons and anything nerdy. When not studying she is often planning her next session of tabletop or playing games with friends.</p>
+                <p><strong>Technologies:</strong> Javascript, HTML5, CSS3</p>
+                <p><strong>Role:</strong> Developed pokemon search function using google places api</p>
               </div>
               <div class="card-action" id="flexbox-turn-on">
-                <a href="https://github.com/member1">GitHub</a>
+                <a href="https://github.com/Aricoria10">GitHub</a>
                 <a href="https://www.linkedin.com/in/member1">LinkedIn</a>
               </div>
             </div>
