--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
               />
             </div>
             <div class="col s12 m6">
-              <h3>New Section</h3>
-              <p>Put some stuff here dude!</p>
+              <h3>How to use</h3>
+              <p>Follow these steps to find pokemon at your favorite locations!</p>
               <ol>
                 <li>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Go to the maps page in the Nav bar.
                 </li>
                 <li>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Select the type of Pokemon you are searching for.
                 </li>
                 <li>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Click on the marker to display information about the location. The side of the page will dsiplay possible pokemon at that location.
                 </li>
               </ol>
             </div>
