--- a/type-search.html
+++ b/type-search.html
@@ -54,7 +54,7 @@
         <div class="col s12 l8">
           <div class="ui-widget">
             <!--TODO Mary: add poketype icons and names-->
-            <div class="input-field">
+            <div class="input-field s6">
               <input id="poketypes" type="text" class="validate" />
               <label for="poketypes">Choose a Pokémon type:</label>
             </div>
@@ -70,7 +70,7 @@
           </div>
           <div id="map"></div>
         </div>
-        <div class="col s12 l4" id="pokemon-data">
+        <div class="col s12 l4 teal white-text" id="pokemon-data">
           <div class="col s12">Possible Pokemon at these locations:</div>
           <ol class="col s12" id="individual-pokemon"></ol>
         </div>
@@ -78,7 +78,6 @@
     </div>
 
     <!--Google maps-->
-    <!-- "https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g&libraries=places" -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAREc5G26pYeKRvU3WItAY7isaJey0VA4g&libraries=places"></script>
     <!--Jquery import-->
     <script
