adding comments to code

--- a/about-us.html
+++ b/about-us.html
@@ -48,8 +48,8 @@
     <div class="section">
       <div class="container">
         <h2>About Us</h2>
-        <p class="flow-text">Fat Pokemon</p>
-        <p>Information about project and team goes here</p>
+        <p class="flow-text">Pokenom</p>
+        <p>Pokenom is a tool for Pokemon go trainers to use when they want to find pokemon in their area, but are unsure where to start looking. Using this tool they can search for pokemon types around them and the map will show locations where they might spawn. All the user needs to do then is choose the location and head there.</p>
       </div>
     </div>
 
@@ -65,6 +65,7 @@
                 <img src="./assets/images/Thea.png" />
                 <span class="card-title">Aletheia</span>
               </div>
+              <!-- Aletheia -->
               <div class="card-content">
                 <p>Aletheia is a current student at the UCF bootcamp. She has a passion for Dungeons and Dragons and anything nerdy. When not studying she is often planning her next session of tabletop or playing games with friends.</p>
                 <p><strong>Technologies:</strong> Javascript, HTML5, CSS3</p>
