--- a/type-search.html
+++ b/type-search.html
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="col s12 l8">
           <div class="ui-widget">
-            <!--TODO Mary: add poketype icons and names-->
+            <!-- Search field -->
             <div class="input-field s6">
               <input id="poketypes" type="text" class="validate" />
               <label for="poketypes">Choose a Pokémon type:</label>
