--- a/about-us.html
+++ b/about-us.html
@@ -112,12 +112,16 @@
                 <span class="card-title">Robert</span>
               </div>
               <div class="card-content">
-                <p>Short Bio of Robert</p>
-                <p><strong>Technologies:</strong> Tech1, Tech2, Tech3</p>
-                <p><strong>Role:</strong> Role in the Project</p>
+                <p>Robert is a recent high school graduate the year 20203 and just 
+                  started his codeing journey.His hobbies consit of the gym,vidoe games,and cooking
+                  you will find him trying to get bigger in the gym or studying code to attempt to learn 
+                  more.
+                </p>
+                <p><strong>Technologies:</strong> HTML, CSS, js</p>
+                <p><strong>Role:</strong> student</p>
               </div>
               <div class="card-action" id="flexbox-turn-on">
-                <a href="https://github.com/member1">GitHub</a>
+                <a href="https://github.com/RobertMcDermot">GitHub</a>
                 <a href="https://www.linkedin.com/in/member1">LinkedIn</a>
               </div>
             </div>
