we added the ability to colapse pokemon data on the side bar of the screen

--- a/type-search.html
+++ b/type-search.html
@@ -70,9 +70,9 @@
           </div>
           <div id="map"></div>
         </div>
-        <div class="col s12 l4 teal white-text" id="pokemon-data">
+        <div class="col s12 l4 teal " id="pokemon-data">
           <div class="col s12">Possible Pokemon at these locations:</div>
-          <ol class="col s12" id="individual-pokemon"></ol>
+          <ol class="col s12 collapsible" id="individual-pokemon"></ol>
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@
           source: poketypes,
         });
       });
-    </script>
+    </script><script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script src="./assets/js/type-search.js"></script>
     <script src="./assets/js/main-page.js"></script>
