i added a collapsavle drop down for the pokemon on the right side of the screen

--- a/type-search.html
+++ b/type-search.html
@@ -72,7 +72,7 @@
         </div>
         <div class="col s12 l4 teal " id="pokemon-data">
           <div class="col s12">Possible Pokemon at these locations:</div>
-          <ol class="col s12 collapsible" id="individual-pokemon"></ol>
+          <ol class="col s12 collapsible popout" id="individual-pokemon"></ol>
         </div>
       </div>
     </div>
